Added atmosphere for satellites.

--- a/SpaceSimulator/SpaceSimulator.csproj
+++ b/SpaceSimulator/SpaceSimulator.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Mathematics\Quaterniond.cs" />
     <Compile Include="Mathematics\Vector3d.cs" />
     <Compile Include="Mathematics\Vector4d.cs" />
+    <Compile Include="Simulator\ArtificialPhysicsObject.cs" />
     <Compile Include="Physics\Atmosphere\AtmosphericFormulas.cs" />
     <Compile Include="Physics\Atmosphere\AtmosphericProperties.cs" />
     <Compile Include="Physics\Atmosphere\EarthAtmosphericModel.cs" />
