--- a/SpaceSimulator/SpaceSimulator.csproj
+++ b/SpaceSimulator/SpaceSimulator.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Common\Camera\CameraHelpers.cs" />
     <Compile Include="Common\Camera\FPSCamera.cs" />
     <Compile Include="Common\Camera\OrbitCamera.cs" />
+    <Compile Include="Common\Camera\SpaceCamera.cs" />
     <Compile Include="Common\D3DApp.cs" />
     <Compile Include="Common\Effects\BasicEffect.cs" />
     <Compile Include="Common\Effects\BlendStates.cs" />
