Moved all application specific camera stuff to new namespace and to SpaceCamera class.

--- a/SpaceSimulator/SpaceSimulator.csproj
+++ b/SpaceSimulator/SpaceSimulator.csproj
@@ -85,9 +85,9 @@
     <Compile Include="Common\BitmapHelpers.cs" />
     <Compile Include="Common\Camera\BaseCamera.cs" />
     <Compile Include="Common\Camera\CameraHelpers.cs" />
-    <Compile Include="Common\Camera\FPSCamera.cs" />
-    <Compile Include="Common\Camera\OrbitCamera.cs" />
-    <Compile Include="Common\Camera\SpaceCamera.cs" />
+    <Compile Include="Camera\FPSCamera.cs" />
+    <Compile Include="Camera\OrbitCamera.cs" />
+    <Compile Include="Camera\SpaceCamera.cs" />
     <Compile Include="Common\D3DApp.cs" />
     <Compile Include="Common\Effects\BasicEffect.cs" />
     <Compile Include="Common\Effects\BlendStates.cs" />
@@ -228,6 +228,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
