--- a/SpaceSimulator/SpaceSimulator.csproj
+++ b/SpaceSimulator/SpaceSimulator.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Physics\Maneuvers\PlanetaryTransfer.cs" />
     <Compile Include="Physics\Orbits.cs" />
     <Compile Include="Physics\TimeConstants.cs" />
+    <Compile Include="Rendering\Arrow.cs" />
     <Compile Include="Rendering\Plot\GroundTrack.cs" />
     <Compile Include="Rendering\Plot\Heatmap.cs" />
     <Compile Include="Rendering\Plot\PlotHelpers.cs" />
