--- a/SpaceSimulator/packages.config
+++ b/SpaceSimulator/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ColorMine" version="1.1.3.0" targetFramework="net462" />
+  <package id="LiteGuard" version="1.1.0" targetFramework="net462" />
   <package id="MathNet.Numerics" version="3.17.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="SharpDX" version="3.1.1" targetFramework="net462" />
   <package id="SharpDX.D3DCompiler" version="3.1.1" targetFramework="net462" />
   <package id="SharpDX.Desktop" version="3.1.1" targetFramework="net462" />
@@ -12,4 +14,5 @@
   <package id="SharpDX.DXGI" version="3.1.1" targetFramework="net462" />
   <package id="SharpDX.Mathematics" version="3.1.1" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net462" />
+  <package id="Telnet" version="0.8.0" targetFramework="net462" />
 </packages>
