Added a hybrid simulator that switches between kepler solver and integrator

--- a/SpaceSimulator/SpaceSimulator.csproj
+++ b/SpaceSimulator/SpaceSimulator.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Simulator\ITextOutputWriter.cs" />
     <Compile Include="Simulator\NaturalSatelliteObject.cs" />
     <Compile Include="Simulator\OrbitSimulators\ForceModel.cs" />
+    <Compile Include="Simulator\OrbitSimulators\HybridSimulator.cs" />
     <Compile Include="Simulator\PlanetObject.cs" />
     <Compile Include="Simulator\Rocket\AscentControlProgram.cs" />
     <Compile Include="Simulator\Rocket\IRocketControlProgram.cs" />
