--- a/SpaceSimulator.Horizons/SpaceSimulator.Horizons.csproj
+++ b/SpaceSimulator.Horizons/SpaceSimulator.Horizons.csproj
@@ -64,5 +64,8 @@
       <Name>SpaceSimulator</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="License.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
