--- a/SpaceSimulator.Physics/SpaceSimulator.PhysicsTest.csproj
+++ b/SpaceSimulator.Physics/SpaceSimulator.PhysicsTest.csproj
@@ -90,6 +90,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeometryObject.cs" />
     <Compile Include="PhysicsApp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
